# CRM-Hotel

./: .fvmrc  .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  backend-architecture.md  bk.md  compose.prod.yml  compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260502_0001_initial.py  20260503_0002_expand_core_schema.py  20260503_0003_local_media_file_storage.py  20260503_0004_permissions_access_control.py  20260504_0005_user_unit_assignments.py  20260504_0006_operation_assignees.py  20260504_0007_operation_teams_and_cost_centers.py  20260505_0008_finance_assets_and_team_kpis.py  20260505_0009_notifications.py
backend/app/: __init__.py  main.py
backend/app/api/dependencies/: auth.py  pagination.py  unit_scope.py
backend/app/api/errors/: handlers.py  schemas.py
backend/app/api/routers/v1/: __init__.py  (+11 more)
backend/app/core/: access_control.py  config.py  db.py  enums.py  notifications.py  security.py  seed.py
backend/app/domain/shared/: exceptions.py
backend/app/infrastructure/persistence/: models.py
backend/app/schemas/: access.py  auth.py  bookings.py  clients.py  common.py  finance.py  notifications.py  operations.py  reports.py  units.py
backend/deploy/: crm.clo0.net.Caddyfile  deploy-prod.sh  verify_prod_compose_builds.sh
backend/docker/: api.Dockerfile  media.nginx.conf  worker.Dockerfile
backend/tests/: conftest.py  test_access_management.py  test_auth.py  test_booking_lifecycle.py  test_health.py  test_local_cors.py  test_permission_hierarchy.py  test_unit_media_upload.py  test_units_crud.py
(+89 files in other folders)
