[project]
name = "crmhotel-backend"
version = "0.2.0"
description = "Enterprise-grade property management backend built with FastAPI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.16.0",
  "celery[redis]>=5.5.3",
  "email-validator>=2.2.0",
  "eval-type-backport>=0.2.2",
  "fastapi>=0.116.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.9",
  "pydantic-settings>=2.10.1",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.20",
  "sqlmodel>=0.0.24",
  "uvicorn[standard]>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.1"
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
